Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20094

[Regression] Other submenus pop open when navigating to submenu items

XMLWordPrintable

    • (See comments for 2nd set of patches) Qt 5: 0a91c9df01ec8f0c4aef9ce6e5e9bc3804fb80c2, Qt 4: d742aa4ee727de0e318e26ba24b11a780081f0c9

      When navigating to the items in a submenu, it is normal to go directly from the submenu header directly to the desired item even if that path goes across other submenus. It is expected that if the mouse passes across those other submenus quickly enough they will not pop up.

      On my system, submenus always pop up, no matter how quickly the mouse passes across them. This makes the menus very difficult and frustrating to use.

      There is more description of the problem in the KDE bug reports here:
      https://bugs.kde.org/show_bug.cgi?id=276429
      https://bugs.kde.org/show_bug.cgi?id=179267

      The second bug report includes a picture that helps to explain the problem:
      http://bugsfiles.kde.org/attachment.cgi?id=61320

      The red line shows the desired path to the submenu item. The blue path shows the way the mouse must actually travel in order to navigate to the item.

      (Added by Andy Shaw)
      Another approach to reproducing the problem is that you can open the submenu by clicking on the action to cause it, then cut down into the item below and then across quickly into the sub-menu. This will cause the sub-menu to close even though an action in it is highlighted.

        1. qtbug20094_121029.tar
          10 kB
          Friedemann Kleint
        2. QtBug20094-RiverWare1.mp4
          684 kB
          Phil Weinstein
        3. qtbug-20094-test.gif
          182 kB
          Alessandro Portale
        4. qtbug-20094-test.ui
          5 kB
          Alessandro Portale
        For Gerrit Dashboard: QTBUG-20094
        # Subject Branch Project Status CR V

            jolind Jorgen Lind
            leeharr Lee Harr
            Votes:
            25 Vote for this issue
            Watchers:
            29 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes